--- a/product-details.html
+++ b/product-details.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Technological UrVar</title>
+    <title>Detalles del Producto</title>
+    <link rel="stylesheet" href="styles/detailsProduct.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/stylesIndex.css">
 </head>
 <body>
     <header>
@@ -15,18 +15,14 @@
         </div>
         <nav class="menu">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="#">Inicio</a></li>
                 <li><a href="#">Carrito</a></li>
             </ul>
         </nav>
     </header>
     <div class="body">
-        <div class="carousel-container">
-            <div class="carousel">
-                <!-- Imágenes se cargarán aquí dinámicamente -->
-            </div>
-            <button class="carousel-button prev-button">Anterior</button>
-            <button class="carousel-button next-button">Siguiente</button>
+        <div class="container" id="product-details">
+            <!-- Detalles del producto se cargarán aquí dinámicamente -->
         </div>
     </div>
     <footer>
@@ -35,6 +31,6 @@
         </div>
         <div class="contacto">Contacto: info@tuempresa.com</div>
     </footer>
-    <script src="script.js"></script>
+    <script src="router.js"></script>
 </body>
 </html>
