--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="#">Carrito</a></li>
+                <li><a href="shopping-cart.html">Carrito</a></li>
             </ul>
         </nav>
     </header>
     <div class="body">
-        <div class="carousel-container">
+        <section class="carousel-container">
             <div class="carousel">
                 <!-- Imágenes se cargarán aquí dinámicamente -->
             </div>
             <button class="carousel-button prev-button">Anterior</button>
             <button class="carousel-button next-button">Siguiente</button>
-        </div>
+        </section>
+        <section class="product-section">
+
+        </section>
     </div>
     <footer>
         <div class="copyright">
@@ -36,5 +39,6 @@
         <div class="contacto">Contacto: info@tuempresa.com</div>
     </footer>
     <script src="script.js"></script>
+    <script src="router.js"></script>
 </body>
 </html>
