--- a/product-details.html
+++ b/product-details.html
@@ -15,8 +15,8 @@
         </div>
         <nav class="menu">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Carrito</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="shopping-cart.html">Carrito</a></li>
             </ul>
         </nav>
     </header>
@@ -32,5 +32,7 @@
         <div class="contacto">Contacto: info@tuempresa.com</div>
     </footer>
     <script src="router.js"></script>
+    <script src="cart.js"></script>
+
 </body>
 </html>
