--- a/index.html
+++ b/index.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technological UrVar</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/stylesIndex.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/stylesIndex.css" />
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <img src="img/ordenador-personal.png" alt="Logo de Mi Sitio" />
-            <p class="urvar">URVAR TECH</p>
-        </div>
-        <nav class="menu">
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="shopping-cart.html">Carrito</a></li>
-            </ul>
-        </nav>
+      <div class="logo" href="">
+        <img src="img/ordenador-personal.png" alt="Logo de Mi Sitio" />
+        <p class="urvar">UrVar tech</p>
+      </div>
+      <nav class="menu">
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="shopping-cart.html">Carrito</a></li>
+        </ul>
+      </nav>
     </header>
     <div class="body">
-        <section class="carousel-container">
-            <div class="carousel">
-                <!-- Imágenes se cargarán aquí dinámicamente -->
-            </div>
-            <button class="carousel-button prev-button">Anterior</button>
-            <button class="carousel-button next-button">Siguiente</button>
-        </section>
-        <section class="product-section">
-
-        </section>
+      <section class="carousel-container">
+        <div class="carousel">
+          <!-- Imágenes se cargarán aquí dinámicamente -->
+        </div>
+        <button class="carousel-button prev-button"><<</button>
+        <button class="carousel-button next-button">>></button>
+      </section>
+      <section class="product-section"></section>
     </div>
     <footer>
-        <div class="copyright">
-            &copy; 2023 Tu Empresa. Todos los derechos reservados.
-        </div>
-        <div class="contacto">Contacto: info@tuempresa.com</div>
+      <div class="copyright">
+        &copy; 2023 Tu Empresa. Todos los derechos reservados.
+      </div>
+      <div class="contacto">Contacto: info@tuempresa.com</div>
     </footer>
     <script src="script.js"></script>
     <script src="router.js"></script>
-</body>
+  </body>
 </html>
