--- a/product-details.html
+++ b/product-details.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">
             <img src="img/ordenador-personal.png" alt="Logo de Mi Sitio" />
-            <p class="urvar">URVAR TECH</p>
+            <p class="urvar">UrVar tech</p>
         </div>
         <nav class="menu">
             <ul>
