update de footer

--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -40,9 +40,9 @@
 
     <footer>
       <div class="copyright">
-        &copy; 2023 Tu Empresa. Todos los derechos reservados.
+        &copy; UrVar tech 2023. Todos los derechos reservados.
       </div>
-      <div class="contacto">Contacto: info@tuempresa.com</div>
+      <div class="contacto">Contactos: <a href="mailto:ianvargasledezma@gmail.com">ianvargasledezma@gmail.com</a> | <a href="mailto:urbinasilvajeancarlos@gmail.com">urbinasilvajeancarlos@gmail.com</a></div>
     </footer>
     <script src="cart.js"></script>
     <script src="loadCart.js"></script>
