--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
     <footer>
       <div class="copyright">
-        &copy; 2023 Tu Empresa. Todos los derechos reservados.
+        &copy; UrVar tech 2023. Todos los derechos reservados.
       </div>
-      <div class="contacto">Contacto: info@tuempresa.com</div>
+      <div class="contacto">Contactos: <a href="mailto:ianvargasledezma@gmail.com">ianvargasledezma@gmail.com</a> | <a href="mailto:urbinasilvajeancarlos@gmail.com">urbinasilvajeancarlos@gmail.com</a></div>
     </footer>
     <script src="script.js"></script>
     <script src="router.js"></script>
